--- a/src/main/resources/docker-compose/docker-compose.yaml
+++ b/src/main/resources/docker-compose/docker-compose.yaml
@@ -1,2 +1,17 @@
 version: '3'
 services:
+  db:
+    container_name: 'db-weather-station'
+    image: mysql:8.0
+    restart: 'always'
+    environment:
+      MYSQL_DATABASE: weather
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    volumes:
+      - db-weather-station:/var/lib/mysql
+volumes:
+  db-weather-station:
