--- a/src/main/resources/application-loc.yml
+++ b/src/main/resources/application-loc.yml
@@ -4,6 +4,11 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: localhost
+    port: 6379
+    key-prefix:
+      playlist: playlist-%s
   flyway:
     enabled: true
     locations: classpath:/db/migration/
