--- a/src/main/resources/docker-compose/docker-compose.yaml
+++ b/src/main/resources/docker-compose/docker-compose.yaml
@@ -1,5 +1,15 @@
 version: '3'
 services:
+  redis:
+    container_name: redis
+    image: redis:5.0.4
+    command: redis-server
+    ports:
+      - "6379:6379"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 500m
   db:
     container_name: 'db-weather-station'
     image: mysql:8.0
