--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,15 +12,6 @@ server:
 #      exposure:
 #      include: *
 
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/weather
-    username: root
-    password: root
-  jpa:
-    hibernate:
-      ddl-auto: update
-
 #logging:
 #  path: .
 #  level:
@@ -28,3 +19,38 @@ spring:
 #    org:
 #      springframework:
 #        web: info
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/weather
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+  redis:
+    host: localhost
+    port: 6379
+    key-prefix:
+      playlist: playlist-%s
+  flyway:
+    enabled: true
+    locations: classpath:/db/migration/
+    baseline-on-migrate: true
+    encoding: UTF-8
+
+spotify:
+  credentials:
+    client-id: 0aacee2520c2453ba0d48a11246017ea
+    client-secret: 7a020201e09a4637a218b76212fbba13
+  endpoints:
+    playlists-by-category: https://api.spotify.com/v1/browse/categories/%s/playlists
+    playlist-by-id: https://api.spotify.com/v1/playlists/%s/tracks
+    generate-token: https://accounts.spotify.com/api/token
+    user-by-id: https://api.spotify.com/v1/users/%s
+open-weather:
+  credential: ece9972ddb4f03bb4bd686f5b1c906c8
+  endpoints:
+    location-by-coordinates: https://api.openweathermap.org/data/2.5/weather?lat=%s&lon=%s&appid=%s&units=metric
+    location-by-city-name: https://api.openweathermap.org/data/2.5/weather?q=%s&appid=%s&units=metric
