--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,25 +20,25 @@ server:
 #      springframework:
 #        web: info
 
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/weather
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-  redis:
-    host: localhost
-    port: 6379
-    key-prefix:
-      playlist: playlist-%s
-  flyway:
-    enabled: true
-    locations: classpath:/db/migration/
-    baseline-on-migrate: true
-    encoding: UTF-8
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/weather
+#    username: root
+#    password: root
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#  redis:
+#    host: localhost
+#    port: 6379
+#    key-prefix:
+#      playlist: playlist-%s
+#  flyway:
+#    enabled: false
+#    locations: classpath:/db/migration/
+#    baseline-on-migrate: true
+#    encoding: UTF-8
 
 spotify:
   credentials:
