--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,26 @@ server:
   servlet:
     context-path: /weather-station/v1/
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/weather
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+  redis:
+    host: localhost
+    port: 6379
+    key-prefix:
+      playlist: playlist-%s
+#  flyway:
+#    enabled: false
+#    locations: classpath:/db/migration/
+#    baseline-on-migrate: true
+#    encoding: UTF-8
+
 spotify:
   credentials:
     client-id: 0aacee2520c2453ba0d48a11246017ea
