--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/weather
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://postgresql-adjacent-79073
+    driver-class-name: org.postgresql.Driver
 #  jpa:
 #    hibernate:
 #      ddl-auto: update
