--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
     port: 6379
     key-prefix:
       playlist: playlist-%s
-#  flyway:
-#    enabled: false
+  flyway:
+    enabled: false
 #    locations: classpath:/db/migration/
 #    baseline-on-migrate: true
 #    encoding: UTF-8
